# CogniEDA

./: .dvcignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.agents/: README.md  context_memory_manager.md  eda_analyst.md
.agents/rules/: guidelines.md  guildlines.md
artifacts/: README.md
artifacts/data_profiles/: README.md  _template.data_profile.json
artifacts/dataset_assets/: README.md  _template.dataset_asset.json
config/: README.md  agents.toml  mcp.toml  skills.toml
data/: README.md
data/derived/: README.md
data/raw/: README.md
data/samples/: README.md
docs/: architecture.md  artifacts.md  data_versioning.md  idea.md  index.md  persistence.md
docs/architecture/: executor-dispatch.md  first-class-objects.md  implementation-gap-analysis.md  memory-model.md  overview.md  planner-workflow.md  provenance-and-cache.md  session-frame.md  storage-layers.md
docs/concepts/: context-type-safety.md  object-lifecycle.md  validity-envelope.md
docs/development/: contributing.md  guideline.md  pull_request_template.md  setup.md  testing.md
docs/reference/: glossary.md
docs/workflows/: data-profiling-and-cleaning.md  task-to-discovery-lifecycle.md  user-research-workflow.md
skills/: README.md
src/: __init__.py
src/agents/: base_agent.py  base_state.py  llm.py  types.py
src/application/: README.md
src/data/: __init__.py  dvc.py  loaders.py  profiling.py  validation.py
src/db/: __init__.py  init_db.py  migrations.py  models.py  session.py
src/memory/: __init__.py  retrieval_engine.py  (+3 more)
tests/: conftest.py
(+107 files in other folders)
