[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognieda"
version = "0.1.0"
description = "CogniEDA helps users explore data through structured memory, hypothesis generation, validation, and traceable evidence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2,<3.0",
    "pandera>=0.23,<0.27",
    "pydantic>=2.9,<3.0",
    "pyarrow>=18.0,<22.0",
    "sqlmodel>=0.0.22,<0.1",
    "typer>=0.16,<1.0",
    "pydantic-ai>=1.107.0",
    "langgraph>=1.2.6",
    "pydantic-ai-skills>=1.1.0",
]

[project.scripts]
cognieda = "main:main"

[dependency-groups]
dev = [
    "mypy>=1.11,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.8,<1.0",
]

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--doctest-glob=README.md",
]
testpaths = ["tests", "README.md"]
xfail_strict = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
files = ["src"]
mypy_path = ["src"]
strict = true
explicit_package_bases = true
show_error_codes = true
warn_unreachable = true
exclude = [
    "^\\.venv/",
    "^build/",
    "^dist/",
]
